# delfick_project

./: .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  IDEAS  IDEAS.rst  README.rst  find  format  lint  pyproject.toml  pytest.ini  setup.py  tox.ini
.github/workflows/: ci.yml  lint.yml  release.yml
delfick_project/: __init__.py  addons.py  app.py  errors.py  errors_pytest.py  layerz.py  logging.py
delfick_project/norms/: __init__.py  dictobj.py  errors.py  field_spec.py  meta.py  obj.py  spec_base.py  validators.py
delfick_project/norms/sphinx/: show_specs.py
delfick_project/option_merge/: __init__.py  collector.py  converter.py  formatter.py  helper.py  joiner.py  merge.py  not_found.py  path.py  storage.py  value_at.py  versioning.py
docs/: _docs  conf.py  index.rst
docs/api/: addons.rst  app.rst  changelog.rst  errors.rst  layerz.rst  logging.rst  norms.rst  option_merge.rst
docs/api/norms/: index.rst
docs/api/norms/api/: dictobj.rst  errors.rst  meta.rst  spec_base.rst  validators.rst
docs/api/option_merge/: design.rst  index.rst
docs/api/option_merge/api/: collector.rst  converter.rst  formatter.rst  index.rst  merged_options.rst  path.rst  storage.rst
tests/: conftest.py  test_errors.py  test_layerz.py
tests/addons_tests/: __init__.py  conftest.py  helpers.py  test_Addon.py  test_AddonGetter.py  test_Register.py  test_Result.py  test_addon_hook_decorator.py  test_failure.py  test_integration.py
tests/addons_tests/addons_tests_register/: pyproject.toml  setup.py
tests/addons_tests/addons_tests_register/addons_tests_register/: __init__.py
tests/addons_tests/namespace_black/: .dmypy.json  pyproject.toml  setup.py
tests/addons_tests/namespace_black/namespace_black/: four.py  one.py  seven.py  six.py  ten.py  three.py  two.py
tests/addons_tests/namespace_blue/: pyproject.toml  setup.py
tests/addons_tests/namespace_blue/namespace_blue/: five.py  four.py  one.py  six.py  three.py  two.py
tests/addons_tests/namespace_failure/: pyproject.toml  setup.py
tests/addons_tests/namespace_failure/namespace_failure/: bad_hook.py  nohook.py  noresult.py  postregister_and_extras.py  recursive1.py  recursive1_extra.py  recursive2.py  recursive2_extra.py  unimportable.py
tests/addons_tests/namespace_green/: pyproject.toml  setup.py
tests/addons_tests/namespace_green/namespace_green/: eight.py  four.py  nine.py  seven.py  three.py
tests/app_tests/: test_cli_parser.py  test_the_app.py
tests/norms_tests/: test_dictobj.py  test_field_spec.py  test_many_item_spec.py  test_meta.py  test_selection.py  test_spec_base.py  test_validators.py
tests/option_merge_tests/: test_collector.py  test_converter.py  test_formatter.py  test_helper.py  test_joiner.py  test_option_merge.py  test_path.py  test_storage.py  test_value_at.py
tools/: .gitignore  black  pylama  venv
tools/black/: setup_venv
