[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "delfick_project"
dynamic = ["version"]
description = "Common code I use in all my projects"
readme = "README.rst"
license = { text = "MIT" }
requires-python = ">= 3.8"
authors = [
    { name = "Stephen Moore", email = "stephen@delfick.com" },
]
dependencies = [
    "backports.entry-points-selectable==1.2.0"
]

[project.optional-dependencies]
tests = [
    "noseOfYeti[black]==2.4.1",
    "pytest==7.3.0",
    "alt-pytest-asyncio==0.6.0",
    "venvstarter>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/delfick/delfick_project"

[tool.hatch.version]
path = "delfick_project/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/delfick_project",
]

[tool.black]
line-length = 100
include = '\.py$'
exclude = '''
/(
     \.git
   | \.tox
   | dist
   | tools/\.python
)/
'''

[tool.isort]
profile = "black"
skip_glob = [
   ".git/*",
   ".tox/*",
   "dist/*",
   "tools/.*",
]
