[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "namespace-green"
dynamic = ["version"]
license = ""

[project.entry-points."green.addons"]
eight = "namespace_green.eight"
five = "namespace_green.five"
four = "namespace_green.four"
nine = "namespace_green.nine"
one = "namespace_green.one"
seven = "namespace_green.seven"
six = "namespace_green.six"
ten = "namespace_green.ten"
three = "namespace_green.three"
two = "namespace_green.two"

[tool.hatch.version]
path = "namespace_green/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/namespace_green",
]
